# prior_auth_bot

./: AGENTS.md  README.md  agent_pipeline.md  app.py  architecture.md  cdk.json  current_services.md  document_courier.md  document_download.md  document_population.md  manifest  memory_feature.md  patient_data.md  physician_dashboard.md  physician_data.md  physiciandashboard.md  pipeline_dashboard.md  pyproject.toml  search_service.md  self_improvement.md  sky.yaml  speech_to_text.md
agent_plans/: wp1_models_config.md  wp2_embedding_service.md  wp3_enhanced_search_rag.md  wp4_portal_backend.md  wp5_portal_frontend.md  wp6_self_improvement_rag.md  wp7_cleanup.md
cdk.out/: PABotStack.assets.json  PABotStack.metadata.json  PABotStack.template.json  manifest.json  tree.json
cdk.out/asset.0183c1ae90590b432d62ea6d27c95b237c86ef287c8aa162689dff709a8e6a03/: handler.py
cdk.out/asset.40e1b7fe5496d9f56ab1008b948a993bc59d1738357a998045c435ac35345255/: handler.py
cdk.out/asset.6c9e7e37607d7a187ceb473daa7140fae27865a04c63a7065fda9a00685ec3aa/: handler.py
cdk.out/asset.6edf0e3e63d97bb6b04304c2c7cbde1d83c97317d3cc84173e2660a3e6ef21d0/: handler.py
cdk.out/asset.88cabd3473a3e1f826381ab32c5ce45fabc511db3b4ae0994b9a3114d28ce3d6/: handler.py
demo/: architecture.html  demo.js  index.html  particles.js  styles.css
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  (+1 more)
sample_data/: seed_memories.json
scripts/: bootstrap.sh  seed_opensearch.py  simulate_response.py  trigger_pipeline.py  verify_ses.py
stacks/: pa_bot_stack.py
(+56 files in other folders)
