[project]
name = "prior-auth-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0,<11.0.0",
    "boto3>=1.35.0",
    "pydantic>=2.0",
    "PyPDF2>=3.0",
    "pdfrw>=0.4",
    "reportlab>=4.0",
    "opensearch-py>=2.4",
    "requests-aws4auth>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "moto[all]>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stacks", "lambdas"]
